# ank-sdk-python

./: .gitignore  .markdownlint.yml  .pylintrc  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  README.md  SECURITY.md  ci_dev.yml  generate_docs.sh  requirements.txt  requirements_dev.txt  run_checks.py  run_tests.py  setup.cfg  setup.py  sonar-project.properties
.agents/: ARCHITECTURE.md  CODING_STANDARDS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  enchancement.md
.github/workflows/: build.yml  ci.yml  documentation.yml  publish.yml  publish_to_test.yml  release.yml  sonarcloud-pr-scan.yml  sonarcloud.yml  test_package_build.yml  weekly.yml
AnkaiosSDK/: Ankaios.py  __init__.py
AnkaiosSDK/_components/: CompleteState.py  Manifest.py  Request.py  Response.py  Workload.py  WorkloadState.py  __init__.py
AnkaiosSDK/_protos/: __init__.py
ankaios_sdk/: __init__.py  ankaios.py  exceptions.py  utils.py
ankaios_sdk/_components/: __init__.py  complete_state.py  (+12 more)
dev/: ankaios_sdk.py  export_proto.sh  main_ch.py  main_ch_new.py  new_main.py
docs/: Makefile  README.md  generate_versioned_docs.sh
examples/: README.md  ank-exec-bash.sh  ank-logs.sh  manifest.yaml  run_example.sh  stop_example.sh
tests/: test_ankaios.py  test_complete_state.py  test_control_interface.py  test_event_campaign.py  test_log_campaign.py  test_log_queue.py  test_manifest.py  test_request.py  test_utils.py  test_workload.py  test_workload_builder.py
tools/: README.md  fetch_protos.sh  generate_docs.sh  install_ankaios.sh  update_version.sh
(+89 files in other folders)
