[metadata]
name = ankaios-sdk
version = 0.1.0
author= Elektrobit Automotive GmbH and Ankaios contributors
# author_email = 
license = Apache-2.0

[tool:pytest]
testpaths = tests

[coverage:run]
source = .
omit = 
    */__init__.py
    */_protos/*_pb2.py
    */_protos/*_pb2_grpc.py
    */tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == "__main__":

[coverage:html]
directory = reports/coverage/html

[coverage:xml]
output = reports/coverage/cov_report.xml
