[metadata]
name = ankaios-sdk
version = 0.5.0-rc3
ankaios_version = 0.5.0
author = Elektrobit Automotive GmbH and Ankaios contributors
license = Apache-2.0

[tool:pytest]
testpaths = tests

[coverage:run]
source = .
omit = 
    */__init__.py
    */_protos/*_pb2.py
    */_protos/*_pb2_grpc.py
    */tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == "__main__":

[coverage:html]
directory = reports/coverage/html

[coverage:xml]
output = reports/coverage/cov_report.xml
